Fixed scrollbar problem

--- a/css/main.css
+++ b/css/main.css
@@ -1,12 +1,19 @@
+html, body {
+	width: 100%;
+	height: 100%;
+}
+
 body{
 	background-color: #34495e;
 	padding: 0px;
 	margin: 0px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 }
 
 .main-circle{
 	position: relative;
-  margin: 10% auto;
 	border: 2px white solid;
 	border-radius: 50%;
 	width: 500px;
